--- a/index.html
+++ b/index.html
@@ -6,8 +6,50 @@
     <title>Kieke Photography</title>
     <link rel="icon" href="img/cam fabi.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- This section is for navbar -->
+    <nav class="navbar navbar-light bg-white navbar-expand-lg">
+        <div class="container d-flex align-items-center justify-content-between">
+            <img src="img/main logo.png" alt="this is website logo">
+            <ul class="navbar-nav d-none d-md-flex align-items-lg-center gap-4 fs-10 ">
+                <li class="nav-item ">
+                    <a class="nav-link text-danger small" href="#">Home</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link small" href="#">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link small" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link small" href="#">Prices</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link small" href="#">Contact Us</a>
+                </li>
+                <button type="button" class="btn btn-danger custom-button">Get Started</button>
+            </ul>
+        </div>
+    </nav>
+<!-- This is the hero section -->
+<div class="container mx-auto">
+    <div class="row gap-5 gap-md-0 py-5">
+        <div class="col-12 col-md-6 py-5 my-5">
+                <h1 class="fw-bold mb-3 large-text h1_bg_img fw-bold" style="font-family: 'Nexa', sans-serif;">CAPTURING MOMENTS <span class="" style="color: #8A47F6;">IN</span> TIME</h1>
+            <p class="fs-5 fw-bold text-secondary ">A Glimpse into the Past, a Snapshot of the Present. 
+            </p>
+            <button class="btn custom-button" type="submit">
+                Register Interest
+            </button>
+        </div>
+        <div class="col-12 col-md-6">
+            <img src="img/baby picture.png"alt="baby image" class="w-100 h-100 object-fit-cover">
+        </div>
+    </div>
+   </div>
+   <!-- this is for about us section -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
