--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
     </div>
    </div>
    <!-- this is for about us section -->
-    
+   <div class="container mx-auto">
+    <div class="row gap-5 gap-md-0 py-5" style="background-color: #a270f19d;">
+            <div class="col-12 col-md-6">
+                <img src="img/about us demo.png" alt="" class="w-100 h-100 object-fit-cover">
+            </div>
+            <div class="col-12 col-md-6 py-5 my-5">
+                <h1 class="fw-bold mb-3 large-text h1_bg_img fw-bold" style="font-family: 'Nexa', sans-serif;">We Are Very<span class="" style="color: #8A47F6;">Skilled</span> in <span class="" style="color: #8A47F6;">Photography</span></h1>
+                <p class="fs-5 fw-bold text-secondary">Hi, I'm Angelique and photography is my passion! My father passed on the “photographer virus” to me. From analogue to digital. I have taken a number of courses and workshops and, above all, practiced a lot! My children are now used to modeling. Perhaps that is where the penchant for taking photos of children comes from. The pure appearance and enthusiasm of children. It's always fun!  
+                </p>
+                <p>“Photography is the art of frozen time… the ability to store emotions and feelings within a frame.”</p>
+                <button class="btn custom-button" type="submit">
+                    See Our Portfolio
+                </button>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
