--- a/index.html
+++ b/index.html
@@ -51,13 +51,17 @@
    </div>
    <!-- this is for about us section -->
    <div class="container mx-auto">
-    <div class="row gap-5 gap-md-0 py-5" style="background-color: #a270f19d;">
+    <div class="row gap-5 gap-md-0 py-5" style="background-color: #f3edfe;">
             <div class="col-12 col-md-6">
                 <img src="img/about us demo.png" alt="" class="w-100 h-100 object-fit-cover">
             </div>
             <div class="col-12 col-md-6 py-5 my-5">
+                <div class=" container d-flex align-items-center justify-content-start">
+                    <img src="img/Line 1.png" alt="">
+                    <p>About Us</p>
+                </div>
                 <h1 class="fw-bold mb-3 large-text h1_bg_img fw-bold" style="font-family: 'Nexa', sans-serif;">We Are Very<span class="" style="color: #8A47F6;">Skilled</span> in <span class="" style="color: #8A47F6;">Photography</span></h1>
-                <p class="fs-5 fw-bold text-secondary">Hi, I'm Angelique and photography is my passion! My father passed on the “photographer virus” to me. From analogue to digital. I have taken a number of courses and workshops and, above all, practiced a lot! My children are now used to modeling. Perhaps that is where the penchant for taking photos of children comes from. The pure appearance and enthusiasm of children. It's always fun!  
+                <p class="">Hi, I'm Angelique and photography is my passion! My father passed on the “photographer virus” to me. From analogue to digital. I have taken a number of courses and workshops and, above all, practiced a lot! My children are now used to modeling. Perhaps that is where the penchant for taking photos of children comes from. The pure appearance and enthusiasm of children. It's always fun!  
                 </p>
                 <p>“Photography is the art of frozen time… the ability to store emotions and feelings within a frame.”</p>
                 <button class="btn custom-button" type="submit">
@@ -66,6 +70,87 @@
             </div>
         </div>
     </div>
+    <!-- this section is for image gallary -->
+     <div class="container container-fluid px-2 my-5">
+        <div class="heading py-4">
+            <h1 class="large-text text-center"> Our <span style="color: #8A47F6;">Portfolio</span> </h1>
+        </div>
+            <div class="btn-group d-flex justify-content-center flex-wrap gap-2 py-2" role="group" aria-label="Basic example" style="  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);">
+                <button type="button" class="btn">All</button>
+                <button type="button" class="btn" style="color: #8A47F6; text-decoration: underline;">Childrens</button>
+                <button type="button" class="btn">Potraits</button>
+                <button type="button" class="btn">Family</button>
+                <button type="button" class="btn">Other Photography</button>
+            </div>
+            <!-- image gallary section -->
+             <div class="row py-2" >
+                <div class="column">
+                    <img src="img/bb 1.png" alt="">
+                    <img src="img/bb 2.png" alt="">
+                    <img src="img/bb 3.png" alt="">
+                    <img src="img/bb 4.png" alt="">
+                    <img src="img/bb 5.png" alt="">
+                    <img src="img/bb 6.png" alt="">
+                    <img src="img/bb 7.png" alt="">
+                    <img src="img/bb 8.png" alt="">
+                </div>
+             </div>
+     </div>
+     <!-- what our client say -->
+     <div class="container mx-auto" style="background-color: #f3edfe;">
+        <div class="row gap-5 gap-md-0 py-5">
+            <div class="col-12 col-md-6 py-5 my-5">
+                <div class="container d-flex align-items-center justify-content-start ">
+                    <img src="img/Line 1.png" alt="">
+                    <p>Testimonials</p>
+                </div>
+                <h1 class="large-text fw-bold">What Our Clients Say</h1>
+                <p class="">This photography website is a true gem for anyone who appreciates artistry and storytelling through the lens. The images are awe-inspiring, and the website provides an engaging and immersive experience. With a few minor enhancements in user-friendliness and performance, it could become an even more exceptional platform for showcasing photography talent.
+                </p>
+                <div class="container d-flex gap-3">
+                    <div class="d-flex rounded-pill w-50 gap-2" style="background-color: #e3d4fd; align-items: center; ">
+                        <img src="img/clint mini.png" alt="">
+                        <h4>Amane Indahnya</h4>
+                    </div>
+                        <div class="d-flex gap-3">
+                            <img src="img/arrow-left-circle.svg" alt="hi" class="img-fluid" style="width: 40px; height: 50px;">
+                            <img src="img/arrow-right-circle.svg" alt="" class="img-fluid" style="width: 40px; height: 50px;">
+                        </div>
+                    </div>
+                </div>
+            <div class="col-12 col-md-6">
+                <img src="img/client big.png" alt="" class="w-100 h-100 object-fit-cover">
+            </div>
+        </div>
+       </div>
+       <!-- instagram feed -->
+       <div class="my-5">
+            <nav class="navbar navbar-light bg-white navbar-expand-lg">
+                <div class="container d-flex align-items-center justify-content-between">
+                    <h1 class="display-4 large-text">Instagram Feed</h1>
+                    <button type="button" class="btn btn-danger custom-button">Joind Now</button>
+                </div>
+            </nav>
+       </div>
+       <!-- have a qustion -->
+       <div class="container mx-auto" style="background-color: #b8b1b1;">
+        <div class="row gap-5 gap-md-0 py-5">
+            <div class="col-12 col-md-6 py-5 my-5">
+                <h1 class="display-4 large-text">Have A Question?</h1>
+                <p class="py-2">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <!-- this is form section -->
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+            </div>
+            
+         </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
