--- a/index.html
+++ b/index.html
@@ -133,24 +133,58 @@
             </nav>
        </div>
        <!-- have a qustion -->
-       <div class="container mx-auto" style="background-color: #b8b1b1;">
-        <div class="row gap-5 gap-md-0 py-5">
+       <div class="container mx-auto" >
+        <div class="row gap-5 gap-md-0 py-5 ">
             <div class="col-12 col-md-6 py-5 my-5">
                 <h1 class="display-4 large-text">Have A Question?</h1>
                 <p class="py-2">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <!-- this is form section -->
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input class="form-control" type="text" >
+                  </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                   </div>
                   <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <label for="exampleFormControlTextarea1" class="form-label">Massage</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
                   </div>
+            </div>
+            <!-- this is for get in touch -->
+            <div class="col-12 col-md-6 py-5 my-5 rounded-3 p-4" style="background-color: #ede3fe;">
+                <div>
+                    <h2>Get In Touch!</h2>
+                    <p>We love to hear from you.Our friendly Team is always here to chat.</p>
+                    <div>
+                        <img src="img/location.png" alt="">
+                        <div>
+                            <h3>location:</h3>
+                            <p>199 Nueces ST,Austin,TX 78701</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/call.png" alt="">
+                        <div>
+                            <h3>Phone:</h3>
+                            <p>+1(456)666-4077</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/email.png" alt="">
+                        <div>
+                            <h3>Email:</h3>
+                            <p>support@free.com</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             
          </div>
         </div>
+        <!-- nav bar -->
+         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
