--- a/index.html
+++ b/index.html
@@ -6,7 +6,65 @@
     <title>Kieke Photography</title>
     <link rel="icon" href="img/cam fabi.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+        @import url('https://fonts.cdnfonts.com/css/nexa-bold');
+
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            
+        }
+        body{
+            font-family: "Quicksand", sans-serif;
+            background-image: url(img/gradiyent\ one.png);
+            background-repeat: no-repeat;
+        }
+        /* this is for button */
+        .custom-button {
+            width: 35%; /* Set width to a percentage for responsiveness */
+            max-width: 187px; /* Maximum width */
+            height: 45px;
+            background-color: #FE8C45;
+            border-radius: 5vh;
+            opacity: 1; /* Set to 1 to make it visible */
+            color: #ffffff; /* Button text color */
+            border: none; /* Remove border */
+            font-size: 16px; /* Font size */
+            cursor: pointer; /* Change cursor on hover */
+            transition: opacity 0.3s; /* Smooth transition for opacity */
+        }
+
+        .custom-button:hover {
+            background-color: #fd7e2f;
+            color: white;
+        }
+
+        @media (max-width: 600px) {
+            .custom-button {
+                width: 80%; /* Adjust width for smaller screens */
+                left: 50%; /* Center on smaller screens */
+                transform: translateX(-50%); /* Ensure it remains centered */
+            }
+        }
+        /* this is for large text */
+        .large-text{
+            font-size: 64px;
+            font-weight: 700;
+            line-height: 78px;
+        }
+        /* custom.css */
+        .navbar-nav {
+            display: flex; /* Use flexbox to arrange items in a row */
+            flex-wrap: nowrap; /* Prevent items from wrapping to the next line */
+            align-items: center; /* Align items vertically in the center */
+            justify-content: space-between; /* Distribute space evenly between items */
+            width: 70%;
+        }
+
+
+    </style>
   </head>
   <body>
     <!-- This section is for navbar -->
