Fix gallary sectionvirsion 1.5

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <img
-                    src="img/bb 1.png"
+                    src="img/bb 1.png" style="height: 70vh;"
                     class="w-100 shadow-1-strong rounded mb-4"
                     alt="Boat on Calm Water"
                     />
@@ -187,11 +187,16 @@
                 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <img
-                    src="img/bb 5.png"
+                    src="img/bb 3.png" style="height: 26vh; width: 26vh;"
                     class="w-100 shadow-1-strong rounded mb-4"
                     alt="Waves at Sea"
                     />
                     
+                    <img
+                    src="img/bb 5.png"
+                    class="w-100 shadow-1-strong rounded mb-4"
+                    alt="Yosemite National Park"
+                    />
                     <img
                     src="img/bb 10.png"
                     class="w-100 shadow-1-strong rounded mb-4"
